--- a/src/components/Finger/Finger.module.css
+++ b/src/components/Finger/Finger.module.css
@@ -1,7 +1,22 @@
 .main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   border-radius: 50px;
   background-color: #fcfefd;
   height: 400px;
   width: 120px;
   box-shadow: 5px 5px 10px black, -5px -5px 10px gray;
+}
+
+.imgOne {
+  margin-top: -30px;
+}
+
+.imgTwo {
+  margin-top: -20px;
+}
+.text {
+  font-size: 22px;
+  font-family: "Mystery Quest";
 }
