--- a/src/components/MiddleColumn/MiddleColumn.module.css
+++ b/src/components/MiddleColumn/MiddleColumn.module.css
@@ -1,6 +1,8 @@
 .main {
   height: 100vh;
   display: flex;
+  gap: 20px;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
