--- a/src/components/SideColumn/SideColumn.module.css
+++ b/src/components/SideColumn/SideColumn.module.css
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 }
 
 .img {
   width: 200px;
   height: auto;
+}
+.text {
+  font-size: 1.7rem;
+  font-family: "Mystery Quest";
 }
